--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL = mongodb+srv://igsahilsayyad:9325@cluster0.slc056l.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = "url"
 jwtSecretKey = 'sahil'
